--- a/blocks/paga/page.css
+++ b/blocks/paga/page.css
@@ -4,5 +4,7 @@
     max-width: 1600px;
     box-sizing: border-box;
     background-color: #2a2c2f;
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial', sans-serif ;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
