--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,6 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../vendor/fonts/inter.css);
+@import url(../vendor/inter.css);
 @import url(../blocks/footer/footer.css);
 
