--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,16 @@
 @import url(../vendor/normalize.css);
-@import url(../vendor/fonts/inter.css);
+@import url(../vendor/inter.css);
 @import url(../blocks/paga/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../vendor/inter.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/margin/margin.css);
+@import url(../blocks/lead/__image/lead__image.css);
+
+
 @import url(../blocks/footer/footer.css);
 
