--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,5 +8,6 @@
     line-height:100px;
     text-align:center;
     color:#FFFFFF;   
-    margin: 56px auto 32px auto;
+    margin: 0px auto 32px auto;
+    padding: 0px;
 } 
