--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(../vendor/inter.css);
 @import url(../blocks/paga/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/_position_margin/header_position_margin.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/content/content.css);
@@ -10,6 +11,7 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/margin/margin.css);
 @import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
 
 
 @import url(../blocks/footer/footer.css);
