--- a/blocks/cover/cover__title/cover__title.css
+++ b/blocks/cover/cover__title/cover__title.css
@@ -1,9 +1,11 @@
-.place__title{
+.cover__title{
+    width: 560px;
     font-family:'Inter';
     font-style:normal;
     font-weight:900;
     font-size:72px;
     line-height:76px;
+    text-align:center;
     color:#FFFFFF;
-    margin: 0px;
+    margin: 0px auto 32px auto;
 }
