--- a/blocks/paga/page.css
+++ b/blocks/paga/page.css
@@ -1,12 +1,7 @@
 .page{
-    padding: 28px 48px 24px 48px;
-    max-width: 1280px;
-    min-width: 320px;
-    box-sizing: border-box;
+    margin: 0px;
     background-color: #2a2c2f;
     font-family: 'Inter', 'Arial', sans-serif ;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    box-sizing: border-box;
-    
+    -moz-osx-font-smoothing: grayscale; 
 }
