--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,7 +2,6 @@
     width: 100%;
     display: grid;
     grid-template-columns: 460px 1fr;
-    grid-template-rows: auto auto auto;
-    gap: 0px 40px;
-    border: 1px solid red;
+    grid-template-rows: auto auto ;
+    gap: 48px 40px;
 }
