--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/inter.css);
 @import url(../blocks/paga/page.css);
+@import url(../blocks/paga/paga__conteiner/page__conteiner.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/_position_margin/header_position_margin.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -30,7 +31,13 @@
 @import url(../blocks/place/place__website/place__url-heading/place__url-heading.css);
 @import url(../blocks/place/place__website/place__link/place__link.css);
 @import url(../blocks/place/place__paragraph/place__paragraph.css);
-
-
+@import url(../blocks/place/place__conteiner/place__conteiner.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/cover__overlay/cover__overlay.css);
+@import url(../blocks/cover/cover__title/cover__title.css);
+@import url(../blocks/cover/cover__subtitle/cover__subtitle.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/footer__conteiner-nav/footer__conteiner-nav.css);
+@import url(../blocks/footer/footer__link/footer__link.css);
+@import url(../blocks/footer/footer__copyright/footer__copyright.css);
 
