--- a/blocks/footer/footer__copyright/footer__copyright.css
+++ b/blocks/footer/footer__copyright/footer__copyright.css
@@ -3,4 +3,12 @@
     right: 0px;
     top: 0px;
     margin: 0px;
+    font-family:'Inter';
+    font-style:normal;
+    font-weight:400;
+    font-size:14px;
+    line-height:16px;
+    text-align:right;
+    color:#FFFFFF;
+
 }
