--- a/pages/index.css
+++ b/pages/index.css
@@ -36,8 +36,10 @@
 @import url(../blocks/cover/cover__overlay/cover__overlay.css);
 @import url(../blocks/cover/cover__title/cover__title.css);
 @import url(../blocks/cover/cover__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/cover__conteiner/cover__conteiner.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/footer__conteiner-nav/footer__conteiner-nav.css);
 @import url(../blocks/footer/footer__link/footer__link.css);
 @import url(../blocks/footer/footer__copyright/footer__copyright.css);
+@import url(../blocks/footer/footer_margin_top/footer_margin_top.css);
 
