--- a/pages/index.css
+++ b/pages/index.css
@@ -42,4 +42,5 @@
 @import url(../blocks/footer/footer__link/footer__link.css);
 @import url(../blocks/footer/footer__copyright/footer__copyright.css);
 @import url(../blocks/footer/footer_margin_top/footer_margin_top.css);
+@import url(../blocks/footer/footer__li/footer__li.css);
 
