--- a/blocks/footer/footer__link/footer__link.css
+++ b/blocks/footer/footer__link/footer__link.css
@@ -1,9 +1,10 @@
 .footer__link{
+    text-decoration:none;
     font-family:'Inter';
     font-style:normal;
     font-weight:400;
     font-size:16px;
     line-height:18px;
     color:#FFFFFF;
-    margin: 0px;
+    margin: 0px;  
 }
