--- a/blocks/place/place__website/place__link/place__link.css
+++ b/blocks/place/place__website/place__link/place__link.css
@@ -8,3 +8,7 @@
     text-decoration-line:underline;
     color:#FFFFFF;
 }
+.place__link:hover{
+    transition: opacity 1s ease 0s;
+    opacity: 0.8;
+}
