--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -11,3 +11,8 @@
     color:#FFFFFF;
     margin: 8px 0px 0px 0px;
 }
+@media screen and (max-width: 768px){
+    .lead__caption{
+        margin: 8px 0px 0px 24px;
+    }
+}
