--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -2,3 +2,15 @@
     min-width: 284px;
     min-height: 213px;
 }
+@media screen and (max-width: 1024px){
+    .photo-grid__item{
+        min-width: 300px;
+        min-height: 225px;
+    }
+}
+@media screen and (max-width: 768px){
+    .photo-grid__item{
+        min-width: 352px;
+        min-height: 264px;
+    }
+}
