--- a/blocks/place/place__website/place__url-heading/place__url-heading.css
+++ b/blocks/place/place__website/place__url-heading/place__url-heading.css
@@ -8,3 +8,8 @@
     color:#AAAAAA;
     margin: 0px 0px 12px 0px;
 }
+@media screen and (max-width: 768px){
+    .place__url-heading{
+        line-height:170%;
+    }
+}
