--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,3 +6,15 @@
     background-size: 1184px 740px;
     box-sizing: border-box;
 }
+@media screen and (max-width: 1024px){
+    .cover{
+        width: 1024px;
+        height: 640px;
+    }
+}
+@media screen and (max-width: 768px){
+    .cover{
+        width: 768px;
+        height: 480px;
+    }
+}
