--- a/blocks/footer/footer_margin_top/footer_margin_top.css
+++ b/blocks/footer/footer_margin_top/footer_margin_top.css
@@ -1,3 +1,8 @@
 .footer_margin_top{
     margin-top: 92px;
 }
+@media screen and (max-width: 768px){
+    .footer_margin_top{
+        margin-top: 88px;
+    }
+}
