--- a/blocks/header/_position_margin/header_position_margin.css
+++ b/blocks/header/_position_margin/header_position_margin.css
@@ -1,3 +1,8 @@
 .header_position_margin{
     margin-bottom: 56px;
 }
+@media screen and (max-width: 1024px){
+    .header_position_margin{
+        margin-bottom: 48px;
+    }
+}
