--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,3 +2,8 @@
     width: 690px;
     box-sizing: border-box;
 }
+@media screen and (max-width: 768px){
+    .intro{
+        width: 720px;
+    }
+}
