--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,18 @@
 .lead__image{
-    width: 984px;
+    width: 1184px;
     height: 615px;
+    box-sizing: border-box;
 
+}
+@media screen and (max-width: 1024px){
+    .lead__image{
+        width: 928px;
+        height: 580px;
+    }
+}
+@media screen and (max-width: 768px){
+    .lead__image{
+        width: 768px;
+        height: 480px;
+    }
 }
