--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,9 +9,11 @@
     text-align:center;
     color:#FFFFFF;
     margin: 0px auto 64px auto;
-    padding: 0px;
-
-
-
-    
+    padding: 0px;    
+}
+@media screen and (max-width: 1024px){
+    .lead__subtitle{
+        margin: 0px auto 56px auto;
+           
+    }
 }
