--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,7 +1,12 @@
 .lead{
-    width: 984px;
-    height: 1005px;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
+    
+}
+@media screen and (max-width: 768px){
+    .lead{
+        width: 768px;
+    }
+    
 }
