--- a/blocks/margin/margin.css
+++ b/blocks/margin/margin.css
@@ -1,3 +1,9 @@
 .margin{
     margin: 0 auto;
 }
+@media screen and (max-width: 768px){
+    .margin{
+        margin: 0px 0px 0px -24px;
+    }
+    
+}
