--- a/blocks/paga/paga__conteiner/page__conteiner.css
+++ b/blocks/paga/paga__conteiner/page__conteiner.css
@@ -1,8 +1,15 @@
 .page__conteiner{
-    padding: 28px 48px 24px 48px;
     max-width: 1280px;
     min-width: 320px;
     margin: 0px auto;
     box-sizing: border-box;
     position: relative;
+    padding: 28px 48px 24px 48px;
+}
+@media screen and (max-width: 768px){
+    .page__conteiner{
+        padding: 28px 24px 24px 24px;
+        
+    }
+    
 }
