--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,6 +2,18 @@
     width: 100%;
     display: grid;
     grid-template-columns: 460px 1fr;
-    grid-template-rows: auto auto ;
+    grid-template-rows:auto auto;
     gap: 48px 40px;
+}
+@media screen and (max-width: 1024px){
+    .place{
+        gap: 48px 32px;
+    }
+}
+@media screen and (max-width: 768px){
+    .place{
+        grid-template-columns: 340px 1fr;
+        grid-template-rows:auto auto;
+        gap: 48px 28px;
+    }
 }
