--- a/blocks/place/place__image/place__image.css
+++ b/blocks/place/place__image/place__image.css
@@ -1,6 +1,12 @@
 .place__image{
     grid-column: 1/2;
-    grid-row: 2/4;
+    grid-row: 2/3;
     width: 460px;
     height: 460px;
+}
+@media screen and (max-width: 768px){
+    .place__image{
+        width: 340px;
+        height: 340px;
+    }
 }
