--- a/blocks/place/place__paragraph/place__paragraph.css
+++ b/blocks/place/place__paragraph/place__paragraph.css
@@ -7,7 +7,9 @@
     color:#FFFFFF;
     margin: 0px;
     height: fit-content;
-    
-   
-    
+}
+@media screen and (max-width: 768px){
+    .place__paragraph{
+        font-size:16px;
+}
 }
