--- a/blocks/place/place__title/place__title.css
+++ b/blocks/place/place__title/place__title.css
@@ -6,4 +6,12 @@
     line-height:76px;
     color:#FFFFFF;
     margin: 0px;
+    height: fit-content;
+}
+@media screen and (max-width: 768px){
+    .place__title{
+        font-size:42px;
+        line-height:46px;
+        margin: 0px;
+    }
 }
