--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,10 @@
     height: 18px;
     box-sizing: border-box;
 }
+@media screen and (max-width: 320px){
+    .footer{
+        position: relative;
+        height: auto;
+        box-sizing: border-box;
+    }
+}
