--- a/blocks/place/place__website/place__url-heading/place__url-heading.css
+++ b/blocks/place/place__website/place__url-heading/place__url-heading.css
@@ -13,3 +13,9 @@
         line-height:170%;
     }
 }
+@media screen and (max-width: 320px){
+    .place__url-heading{
+        font-size:12px;
+        line-height:12px;
+    }
+}
