--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -18,3 +18,9 @@
         height: 480px;
     }
 }
+@media screen and (max-width: 320px){
+    .cover{
+        width: 320px;
+        height: 200px;
+    }
+}
