--- a/blocks/cover/cover__overlay/cover__overlay.css
+++ b/blocks/cover/cover__overlay/cover__overlay.css
@@ -25,9 +25,16 @@
     }
     
 }
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 768px){
     .cover__overlay{
         width: 768px;
+        
+    }
+    
+}
+@media screen and (max-width: 320px){
+    .cover__overlay{
+        width: 320px;
         
     }
     
