--- a/blocks/cover/cover_position_left/cover_position_left.css
+++ b/blocks/cover/cover_position_left/cover_position_left.css
@@ -7,9 +7,15 @@
     }
     
 }
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 768px){
     .cover_position_left{
         margin-left: -24px;
+    }
+    
+}
+@media screen and (max-width: 320px){
+    .cover_position_left{
+        margin-left: -16px;
     }
     
 }
