--- a/blocks/footer/footer__copyright/footer__copyright.css
+++ b/blocks/footer/footer__copyright/footer__copyright.css
@@ -1,7 +1,6 @@
 .footer__copyright{
     position: absolute;
     right: 0px;
-    top: 0px;
     margin: 0px;
     font-family:'Inter';
     font-style:normal;
@@ -11,4 +10,12 @@
     text-align:right;
     color:#FFFFFF;
 
+}
+@media screen and (max-width: 320px){
+    .footer__copyright{
+        position: relative;
+        line-height:14px;
+        text-align:left;
+        margin: 46px 0px 0px 0px;
+    }
 }
