--- a/blocks/footer/footer__link/footer__link.css
+++ b/blocks/footer/footer__link/footer__link.css
@@ -8,3 +8,9 @@
     color:#FFFFFF;
     margin: 0px;  
 }
+@media screen and (max-width: 320px){
+    .footer__link{
+        font-size:24px;
+        line-height:24px;
+    }
+}
