--- a/blocks/footer/footer_margin_top/footer_margin_top.css
+++ b/blocks/footer/footer_margin_top/footer_margin_top.css
@@ -6,3 +6,8 @@
         margin-top: 88px;
     }
 }
+@media screen and (max-width: 320px){
+    .footer_margin_top{
+        margin-top: 64px;
+    }
+}
