--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,4 +6,15 @@
     left: 0;
     z-index: 1;
     background-image: url(../../../images/__logo.svg);
+    background-size: cover;
+    background-position: center;
+    
+}
+@media screen and (max-width: 320px){
+    .header__logo{
+        width: 142px ;
+        height: 42px;
+        
+    }
+    
 }
