--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -7,3 +7,9 @@
     line-height:163%;
     color:#FFFFFF;
 }
+@media screen and (max-width: 320px){
+    .intro__text{
+        margin: 40px 0px 34px 0px;
+    }
+    
+}
