--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -7,3 +7,9 @@
     color:#FFFFFF;
     margin: 0 auto;
 }
+@media screen and (max-width: 320px){
+    .intro__title{
+        font-size:32px;
+        line-height:35px;
+    }
+}
