--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -16,3 +16,9 @@
         height: 480px;
     }
 }
+@media screen and (max-width: 320px){
+    .lead__image{
+        width: 320px;
+        height: 200px;
+    }
+}
