--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -17,3 +17,13 @@
            
     }
 }
+@media screen and (max-width: 320px){
+    .lead__subtitle{
+        width: 288px;
+        height: 40px;
+        margin: 0px auto 40px auto;
+        font-size:16px;
+        line-height:20px;
+           
+    }
+}
