--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,3 +11,13 @@
     margin: 0px auto 32px auto;
     padding: 0px;
 } 
+@media screen and (max-width: 320px){
+    .lead__title{
+        width: 288px;
+        height: 88px;
+        font-size:40px;
+        line-height:44px;  
+        margin: 0px auto 16px auto;
+    } 
+    
+}
