--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -14,3 +14,9 @@
         min-height: 264px;
     }
 }
+@media screen and (max-width: 768px){
+    .photo-grid__item{
+        min-width: 288px;
+        min-height: 216px;
+    }
+}
