--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -20,3 +20,10 @@
         gap: 16px;
     }
 }
+@media screen and (max-width: 320px){
+    .photo-grid{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(12, 1fr);
+        gap: 12px;
+    }
+}
