--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -17,3 +17,10 @@
         gap: 48px 28px;
     }
 }
+@media screen and (max-width: 320px){
+    .place{
+        grid-template-columns: 320px;
+        grid-template-rows:auto auto auto auto;
+        gap: 32px;
+    }
+}
