--- a/blocks/place/place__title/place__title.css
+++ b/blocks/place/place__title/place__title.css
@@ -12,6 +12,11 @@
     .place__title{
         font-size:42px;
         line-height:46px;
-        margin: 0px;
+    }
+}
+@media screen and (max-width: 320px){
+    .place__title{
+        font-size:32px;
+        line-height:35px;
     }
 }
