--- a/blocks/footer/footer__copyright/footer__copyright.css
+++ b/blocks/footer/footer__copyright/footer__copyright.css
@@ -1,6 +1,7 @@
 .footer__copyright{
     position: absolute;
     right: 0px;
+    top: 0px;
     margin: 0px;
     font-family:'Inter';
     font-style:normal;
@@ -9,7 +10,6 @@
     line-height:16px;
     text-align:right;
     color:#FFFFFF;
-
 }
 @media screen and (max-width: 320px){
     .footer__copyright{
