--- a/blocks/place/place__conteiner/place__conteiner.css
+++ b/blocks/place/place__conteiner/place__conteiner.css
@@ -1,6 +1,7 @@
 .place__conteiner{
     display: grid;
     gap: 26px;
+    height: fit-content;
 }
 @media screen and (max-width: 768px){
     .place__conteiner{
