--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: 92px;
     box-sizing: border-box;
+    position: relative;
 }
 @media screen and (max-width: 768px){
     .content{
