--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,23 +1,28 @@
 .cover{
-    width: 100%;
     height: 740px;
     background-image: url(../../images/__background.png);
     background-position: center;
-    background-size: 1184px 740px;
+    background-size: calc(100% - 7.5%) 740px;
+    background-repeat: no-repeat;
     box-sizing: border-box;
+    padding: 0px 3.75% 0px 3.75%;
+    position: relative;
 }
 @media screen and (max-width: 1024px){
     .cover{
-        width: 1024px;
+        padding: 0px ;
+        background-size: 100% 640px;
         height: 640px;
     }
 }
 @media screen and (max-width: 768px){
     .cover{
-        width: 768px;
+        padding: 0px ;
+        background-size: 100% 480px;
         height: 480px;
     }
 }
+
 @media screen and (max-width: 320px){
     .cover{
         width: 320px;
