--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,16 +6,16 @@
     line-height:28px;
     text-align:right;
     color:#FFFFFF;
-    margin: 0;
+    margin: 0px 0px 6px 0px;
 }
-.header__lang-link:nth-child(2){
-    margin-right: 18px;
+.header__lang-link:nth-child(1){
     text-decoration-line:underline;
 }
 @media screen and (max-width: 320px){
     .header__lang-link{
         font-size:18px;
         line-height:20px;
+        margin: 0px 0px 8px 0px;
     }
     
 }
