--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,14 +1,25 @@
 .intro{
-    width: 690px;
+    width: 100%;
     box-sizing: border-box;
+    padding: 0px 34.53125% 0px 11.5625%;
+}
+@media screen and (max-width: 1024px){
+    .intro{
+        padding: 0px 27.9296875% 0px 4.6875%;
+    }
 }
 @media screen and (max-width: 768px){
     .intro{
-        width: 720px;
+        padding: 0px 3.125% 0px 3.125%;
     }
 }
-@media screen and (max-width: 320px){
+@media screen and (max-width: 768px){
     .intro{
-        width: 100%;
+        padding: 0px 3.125% 0px 3.125%;
+    }
+}
+@media screen and (max-width: 768px){
+    .intro{
+        padding: 0px 5%;
     }
 }
