--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,5 @@
 .lead__subtitle{
     width: 640px;
-    height: 72px;
     font-family:'Inter';
     font-style:normal;
     font-weight:400;
@@ -8,22 +7,16 @@
     line-height:36px;
     text-align:center;
     color:#FFFFFF;
-    margin: 0px auto 64px auto;
     padding: 0px;    
-}
-@media screen and (max-width: 1024px){
-    .lead__subtitle{
-        margin: 0px auto 56px auto;
-           
-    }
+    margin: 32px auto 64px auto;
 }
 @media screen and (max-width: 320px){
     .lead__subtitle{
-        width: 288px;
-        height: 40px;
-        margin: 0px auto 40px auto;
+        width:calc(100% - 10%);
         font-size:16px;
         line-height:20px;
-           
+        padding: 0 5% ;
+        margin: 16px auto 40px auto;
     }
+    
 }
