--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,5 @@
 .lead__title{
     width: 720px;
-    height: 200px;
     font-family:'Inter';
     font-style:normal;
     font-weight:900;
@@ -8,16 +7,16 @@
     line-height:100px;
     text-align:center;
     color:#FFFFFF;   
-    margin: 0px auto 32px auto;
     padding: 0px;
+    margin: 0px auto;
+    text-rendering: optimizeLegibility;
 } 
 @media screen and (max-width: 320px){
     .lead__title{
-        width: 288px;
-        height: 88px;
+        width:calc(100% - 10%);
+        padding: 0 5% ;
         font-size:40px;
-        line-height:44px;  
-        margin: 0px auto 16px auto;
-    } 
-    
+        line-height:44px;
+        
+    }
 }
