--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,18 +1,27 @@
 .lead{
-    width: 100%;
+    
     display: flex;
     flex-direction: column;
+    padding: 0px 11.5625% 0px 11.5625%;
+    
+}
+@media screen and (max-width: 1024px){
+    .lead{
+        padding: 0px 4.6875% 0px 4.6875%;
+    }
     
 }
 @media screen and (max-width: 768px){
     .lead{
-        width: 768px;
+        width: 100%;
+        padding: 0px;
     }
     
 }
 @media screen and (max-width: 320px){
     .lead{
-        width: 320px;
+        width: 100%;
+        padding: 0px;
     }
     
 }
