--- a/blocks/paga/page.css
+++ b/blocks/paga/page.css
@@ -1,7 +1,15 @@
 .page{
-    margin: 0px;
+    margin: 0px auto;
     background-color: #2a2c2f;
     font-family: 'Inter', 'Arial', sans-serif ;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale; 
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
+
+
+
+
 }
