--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,12 +5,14 @@
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
     box-sizing: border-box;
+    padding: 0px 3.75% 0px 3.75%;
 }
 @media screen and (max-width: 1024px){
     .photo-grid{
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 1fr);
         gap: 14px;
+        padding: 0px 4.6875% 0px 4.6875%;
     }
 }
 @media screen and (max-width: 768px){
@@ -18,6 +20,7 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(6, 1fr);
         gap: 16px;
+        padding: 0px 3.125% 0px 3.125%;
     }
 }
 @media screen and (max-width: 320px){
