--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,6 +7,7 @@
 }
 @media screen and (max-width: 1024px){
     .place{
+        grid-template-columns: 440px 1fr;
         gap: 48px 32px;
     }
 }
