--- a/blocks/place/place__image/place__image.css
+++ b/blocks/place/place__image/place__image.css
@@ -4,6 +4,12 @@
     width: 460px;
     height: 460px;
 }
+@media screen and (max-width: 1024px){
+    .place__image{
+        width: 440px;
+        height: 440px;
+    }
+}
 @media screen and (max-width: 768px){
     .place__image{
         width: 340px;
@@ -12,8 +18,8 @@
 }
 @media screen and (max-width: 320px){
     .place__image{
+        grid-row: 3/4;
         width: 320px;
         height: 320px;
-        grid-row: 3/4;
     }
 }
