--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,11 +1,12 @@
 .cover{
+    max-width: 100%;
     height: 740px;
     background-image: url(../../images/__background.png);
     background-position: center;
     background-size: calc(100% - 7.5%) 740px;
     background-repeat: no-repeat;
     box-sizing: border-box;
-    padding: 0px 3.75% 0px 3.75%;
+    padding: 0px 48px;
     position: relative;
 }
 @media screen and (max-width: 1024px){
@@ -17,7 +18,6 @@
 }
 @media screen and (max-width: 768px){
     .cover{
-        padding: 0px;
         background-size: 100% 480px;
         height: 480px;
     }
@@ -25,7 +25,6 @@
 
 @media screen and (max-width: 320px){
     .cover{
-        width: 320px;
         height: 200px;
     }
 }
