--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,26 +1,26 @@
 .header{
+    max-width: 100%;
     min-height: 52px;
     position: relative;
     display: flex;
     align-items: flex-end;
     box-sizing: border-box;
-    max-width: 100%;
-    padding: 2.1875% 3.75% 4.375% 3.75%;
+    padding: 28px 48px 56px 48px;
     justify-content: space-between;
 }
 @media screen and (max-width: 1024px){
     .header{
-        padding: 2.734375% 4.6875% 4.6875% 4.6875%;
+        padding: 28px 48px 48px 48px;
     }
 }
 @media screen and (max-width: 768px){
     .header{
-        padding: 3.64683% 3.125% 6.25% 3.125%;
+        padding: 28px 24px 48px 24px;
     }
 }
 @media screen and (max-width: 320px){
     .header{
-        padding: 5% 5% 15% 5%;
+        padding: 16px 16px 48px 16px;
         min-height: 42px;
         
     }
