--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,26 +1,17 @@
 .lead{
-    
     display: flex;
     flex-direction: column;
-    padding: 0px 11.5625% 0px 11.5625%;
+    padding: 0px 148px 0px 148px;
     
 }
 @media screen and (max-width: 1024px){
     .lead{
-        padding: 0px 4.6875% 0px 4.6875%;
+        padding: 0px 48px 0px 48px;
     }
     
 }
 @media screen and (max-width: 768px){
     .lead{
-        width: 100%;
-        padding: 0px;
-    }
-    
-}
-@media screen and (max-width: 320px){
-    .lead{
-        width: 100%;
         padding: 0px;
     }
     
