--- a/blocks/paga/paga__conteiner/page__conteiner.css
+++ b/blocks/paga/paga__conteiner/page__conteiner.css
@@ -4,6 +4,5 @@
     margin: 0px auto;
     box-sizing: border-box;
     position: relative;
-    overflow: hidden;
-    
+    overflow-x: hidden;   
 }
