--- a/blocks/paga/page.css
+++ b/blocks/paga/page.css
@@ -8,9 +8,5 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
-    overflow: hidden;
-
-
-
-
+    overflow-x: hidden;
 }
