--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     padding: 92px 48px 24px 48px;
     justify-content: space-between;
+    flex-wrap: wrap;
+    
+    
 }
 @media screen and (max-width: 768px){
     .footer{
