--- a/blocks/cover/cover__subtitle/cover__subtitle.css
+++ b/blocks/cover/cover__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle{
-    width: 360px;
+    max-width: 360px;
     font-family:'Inter';
     font-style:normal;
     font-weight:400;
@@ -11,7 +11,7 @@
 }
 @media screen and (max-width: 320px){
     .cover__subtitle{
-        width: 288px;
+        max-width: 288px;
         font-size:14px;
         line-height:16px;
         margin: 0px auto;
