--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -12,6 +12,14 @@
     text-rendering: optimizeLegibility;
 } 
 
+@media screen and (max-width: 712px){
+    .lead__title{
+       
+        font-size:12.3vw;
+        line-height:14.3vw;
+        
+    }
+}
 @media screen and (max-width: 320px){
     .lead__title{
         max-width: 288px;
