--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,22 +1,5 @@
 .photo-grid__item{
-    min-width: 284px;
-    min-height: 213px;
-}
-@media screen and (max-width: 1024px){
-    .photo-grid__item{
-        min-width: 300px;
-        min-height: 225px;
-    }
-}
-@media screen and (max-width: 768px){
-    .photo-grid__item{
-        min-width: 352px;
-        min-height: 264px;
-    }
-}
-@media screen and (max-width: 320px){
-    .photo-grid__item{
-        min-width: 288px;
-        min-height: 216px;
-    }
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
