--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,6 +6,9 @@
     gap: 16px;
     box-sizing: border-box;
     padding: 0px 48px;
+    position: relative;
+    
+    
 }
 @media screen and (max-width: 1024px){
     .photo-grid{
