--- a/blocks/place/place__image/place__image.css
+++ b/blocks/place/place__image/place__image.css
@@ -1,25 +1,25 @@
 .place__image{
     grid-column: 1/2;
     grid-row: 2/3;
-    width: 460px;
-    height: 460px;
+    max-width: 460px;
+    max-height: 460px;
 }
 @media screen and (max-width: 1024px){
     .place__image{
-        width: 440px;
-        height: 440px;
+        max-width: 440px;
+        max-height: 440px;
     }
 }
 @media screen and (max-width: 768px){
     .place__image{
-        width: 340px;
-        height: 340px;
+        max-width: 340px;
+        max-height: 340px;
     }
 }
-@media screen and (max-width: 320px){
+@media screen and (max-width: 385px){
     .place__image{
         grid-row: 3/4;
-        width: 320px;
-        height: 320px;
+        max-width: 320px;
+        max-height: 320px;
     }
 }
