--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,5 @@
 .header__lang-link{
+    text-decoration:none;
     font-family:'Inter';
     font-style:normal;
     font-weight:400;
@@ -7,9 +8,6 @@
     text-align:right;
     color:#FFFFFF;
     margin: 0px 0px 6px 0px;
-}
-.header__lang-link:nth-child(1){
-    text-decoration-line:underline;
 }
 @media screen and (max-width: 320px){
     .header__lang-link{
