--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,6 @@
 .cover__overlay{
-    position: absolute;
-    width: calc(100% - 7.5%);
+    display: grid;
+    width: 100%;
     height: 100%;
     opacity: 0.3;
     text-decoration: none;
@@ -8,8 +8,7 @@
     -webkit-transition: opacity 1s ease;
     -moz-transition: opacity 1s ease;
     transition: opacity 1s ease;
-    
-    
+    align-content: center;   
 }
 .cover__overlay:hover{
     transition: opacity 1s ease 0s;
