--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,31 +1,33 @@
 .cover{
+    display: grid;
     max-width: 100%;
-    height: 740px;
+    min-height: 740px;
     background-image: url(../../images/__background.png);
     background-position: center;
-    background-size: calc(100% - 7.5%) 740px;
+    background-size: calc(100% - 96px) 740px;
     background-repeat: no-repeat;
     box-sizing: border-box;
     padding: 0px 48px;
     position: relative;
+
     
 }
 @media screen and (max-width: 1024px){
     .cover{
         padding: 0px;
         background-size: 100% 640px;
-        height: 640px;
+        min-height: 640px;
     }
 }
 @media screen and (max-width: 768px){
     .cover{
         background-size: 100% 480px;
-        height: 480px;
+        min-height: 480px;
     }
 }
 
 @media screen and (max-width: 320px){
     .cover{
-        height: 200px;
+        min-height: 200px;
     }
 }
