--- a/blocks/number/number.css
+++ b/blocks/number/number.css
@@ -1,10 +1,9 @@
-.intro__list{
+.number{
     font-family:'Inter';
     font-style:normal;
-    font-weight:700;
+    font-weight:400;
     font-size:12px;
     line-height:18px;
     color:#FFFFFF;
     margin: 0 auto;
-    
 }
