--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,3 +4,8 @@
     justify-content: flex-end;
     margin: 0px;
 }
+@media screen and (max-width: 385px){
+    .place__website{
+        padding: 0px 16px;
+    }
+}
