--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -2,17 +2,16 @@
     display: grid;
     width: 100%;
     height: 100%;
-    opacity: 0.3;
+    background-color: rgba(42,44,47,0.3);
     text-decoration: none;
-    background-color: #2a2c2f;
-    -webkit-transition: opacity 1s ease;
-    -moz-transition: opacity 1s ease;
-    transition: opacity 1s ease;
+    -webkit-transition: background-color 1s ease;
+    -moz-transition: background-color 1s ease;
+    transition: background-color 1s ease;
     align-content: center;   
 }
 .cover__overlay:hover{
-    transition: opacity 1s ease 0s;
-    opacity: 0.8;
+    transition: background-color 1s ease 0s;
+    background-color: rgba(42,44,47,0.8);
 }
 @media screen and (max-width: 1024px){
     .cover__overlay{
