--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,25 +1,22 @@
 .lead__image{
     width: 100%;
-    height: 615px;
     box-sizing: border-box;
     margin: 0 auto;
+    object-fit: cover;
 
 }
 @media screen and (max-width: 1024px){
     .lead__image{
         width: 100%;
-        height: 580px;
     }
 }
 @media screen and (max-width: 768px){
     .lead__image{
         width: 100%;
-        height: 480px;
     }
 }
 @media screen and (max-width: 320px){
     .lead__image{
         width: 100%;
-        height: 200px;
     }
 }
