--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,8 +7,7 @@
     box-sizing: border-box;
     padding: 0px 48px;
     position: relative;
-    
-    
+    margin: 0px;   
 }
 @media screen and (max-width: 1024px){
     .photo-grid{
