--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,15 +4,15 @@
     min-height: 740px;
     background-image: url(../../images/__background.png);
     background-position: center;
-    background-size: calc(100% - 96px);
+    background-size: cover;
     background-repeat: no-repeat;
     background-clip: padding-box;
-    padding: 0px 48px;
+    margin: 0px 48px;
     position: relative;  
 }
 @media screen and (max-width: 1024px){
     .cover{
-        padding: 0px;
+        margin: 0px;
         min-height: 640px;
         background-size: cover;
     }
