--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,6 +8,10 @@
     color:#FFFFFF;
     margin: 0px;  
 }
+.footer__link:hover{
+    transition: opacity 1s ease 0s;
+    opacity: 0.8;
+}
 @media screen and (max-width: 320px){
     .footer__link{
         font-size:24px;
